uat-53 fixed light blue background flicker

--- a/web/themes/custom/ellison/components/00-base/tailwind/_tailwind.scss
+++ b/web/themes/custom/ellison/components/00-base/tailwind/_tailwind.scss
@@ -2520,17 +2520,6 @@ video {
   .button-secondary {
     line-height: 1.3;
   }
-  /* handles hover when bg is same is hover color */
-  .group.bg-color--cyan:hover,
-  .group.bg-color--light-blue:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  }
-  .group.bg-color--cyan:hover,
-  .group.bg-color--light-blue:hover {
-    --tw-text-opacity: 1;
-    color: rgb(70 182 227 / var(--tw-text-opacity));
-  }
 }
 
 .component {
@@ -6335,7 +6324,7 @@ fieldset.radios--wrapper {
   &.diagonal-forward-slash-on::before,
   &.diagonal-forward-slash-on:hover::before,
   &.tilt-back-slash-on::before,
-  &.tilt-back-slash-on:hover::before{
+  &.tilt-back-slash-on:hover::before {
     background: linear-gradient(to right bottom, transparent 50%, #46B6E3 50.5%);
   }
   &.diagonal-forward-slash-on::after,
@@ -6391,10 +6380,11 @@ fieldset.radios--wrapper {
   &.diagonal-forward-slash-on::before,
   &.diagonal-forward-slash-on:hover::before,
   &.tilt-back-slash-on::before,
-  &.tilt-back-slash-on:hover::before{
+  &.tilt-back-slash-on:hover::before {
     background: linear-gradient(to right bottom, transparent 50%, #46B6E3 50.5%);
   }
-  &.diagonal-forward-slash-on::after {
+  &.diagonal-forward-slash-on::after,
+  &.diagonal-forward-slash-on:hover::after {
     background: linear-gradient(to left top, transparent 50%, #46B6E3 50.5%);
   }
 }
